--- a/ldap.conf
+++ b/ldap.conf
@@ -8,7 +8,8 @@
 #BASE	dc=example,dc=com
 #URI	ldap://ldap.example.com ldap://ldap-master.example.com:666
 BASE	dc=FROSK,dc=co,dc=jp
-URI	ldap://172.31.28.197/
+#URI	ldaps://54.65.235.143/
+URI	ldaps://172.31.18.142/
 
 #SIZELIMIT	12
 #TIMELIMIT	15
@@ -16,4 +17,6 @@ URI	ldap://172.31.28.197/
 
 # TLS certificates (needed for GnuTLS)
 TLS_CACERT	/etc/ssl/certs/ca-certificates.crt
-
+sudoers_base   ou=SUDOers,dc=FROSK,dc=co,dc=jp
+TLS_REQCERT never
+tls_checkpeer no
